--- a/rails/app/assets/stylesheets/kickstart_rails/components/_tooltips.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_tooltips.sass
@@ -1,3 +1,54 @@
+=tooltip_base
+  position: absolute
+  display: block
+  opacity: 0
+  bottom: 100%
+  box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25)
+  pointer-events: none
+  max-width: 350px
+  min-width: 100px
+  text-align: center
+  transition: all 0.25s
+
+=tooltip_arrow
+  border-top-style: solid
+  border-top-width: 10px
+  border-left: 10px solid transparent
+  border-right: 10px solid transparent
+  width: 0px
+  height: 0px
+  content: ' '
+  display: block
+  background: transparent
+  position: absolute
+  left: 50%
+  margin-left: -8px
+  opacity: 0
+
+[data-ks-tooltip]
+  position: relative
+
+  &:after
+    content: attr(data-ks-tooltip)
+    +label($primary-color)
+    +tooltip_base
+    transform: translateY(0px)
+    z-index: 10
+
+  &:before
+    +tooltip_arrow
+    border-top-color: $primary-color
+    bottom: 100%
+    z-index: 100
+
+  &:hover
+    &:after, &:before
+      opacity: 1
+
+    &:after 
+      transform: translateY(-8px)
+      transition: transform 0.25s
+
 =tooltip_trigger-default($background-color: $blue)
   position: relative
   display: inline-block
@@ -5,55 +56,16 @@
 
   .tooltip
     +label($background-color)
-    position: absolute
-    display: block
-    opacity: 0
-    bottom: 100%
-    box-shadow: 0px 5px 25px rgba(0, 0, 0, 0.25)
-    pointer-events: none
-    max-width: 350px
-    min-width: 100px
-    text-align: center
+    +tooltip_base
     left: -30px
     right: -30px
     margin: 10px auto
-    transition: all 0.25s
     transform: translateY(8px)
     z-index: 10
 
     &:after
-      border-top-style: solid
-      border-top-width: 10px
-      border-left: 10px solid transparent
-      border-right: 10px solid transparent
+      +tooltip_arrow
       top: 100%
-      width: 0px
-      height: 0px
-      content: ' '
-      display: block
-      background: transparent
-      position: absolute
-      left: 50%
-      margin-left: -8px
-
-    &.tooltip-red
-      +label($red)
-
-    &.tooltip-orange
-      +label($orange)
-
-    &.tooltip-yellow
-      +label($yellow)
-      color: map-get($black, light)
-
-    &.tooltip-green
-      +label($green)
-
-    &.tooltip-blue
-      +label($blue)
-
-    &.tooltip-violet
-      +label($violet)
 
     &.tooltip-bottom
       top: 100%
@@ -93,6 +105,17 @@
         top: 8px
 
   &:hover
+    [data-ks-tooltip]
+      &:after, &:before
+        opacity: 1
+
+      &:after 
+        transform: translateY(-8px)
+        transition: transform 0.25s
+
     .tooltip
       opacity: 1
       transform: translateY(0px)
+ 
+      &:after
+        opacity: 1
