--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -27,6 +27,9 @@
   &.button-secondary
     +button($secondary-color)
 
+  &.button-clear
+    +button(transparent)
+
   &.button-red
     +button($red)
 
