Reordering files and fixing typography

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -5,6 +5,10 @@ block hero-title
 
 block hero-example
   div
+    .button White
+    | &nbsp;
+    .button.button-clear Clear
+    | &nbsp;
     .button.button-red Red
     | &nbsp;
     .button.button-orange Orange
