--- a/lib/jade/docs/3.x/ui/images/index.jade
+++ b/lib/jade/docs/3.x/ui/images/index.jade
@@ -38,14 +38,12 @@ block basic
   .thumbnail-content
     img(src="/img/mountains.png" style="width: 150px;height: 150px")
     article
-      p
-        strong Imagine living among the mountains
+      h1 Imagine living among the mountains
       p In one of our gorgeous luxury timeshare condominiums, finally this dream can become a reality!
 
   .thumbnail-content
     article
-      p
-        strong Imagine living among the mountains
+      h1 Imagine living among the mountains
       p In one of our gorgeous luxury timeshare condominiums, finally this dream can become a reality!
     img(src="/img/mountains.png" style="width: 150px;height: 150px")
 
@@ -56,14 +54,14 @@ block basic
           <div class="feature">
             <img src="mountains.png" />
             <article>
-              <p><strong>Imagine living among the mountains</strong></p>
+              <h1>Imagine living among the mountains</h1>
               <p>...</p>
             </article>
           </div>
 
           <div class="feature">
             <article>
-              <p><strong>Imagine living among the mountains</strong></p>
+              <h1>Imagine living among the mountains</h1>
               <p>...</p>
             </article>
             <img src="mountains.png" />
@@ -80,14 +78,14 @@ block basic
           <div class="thumbnail-content">
             <img src="mountains.png" />
             <article>
-              <p><strong>Imagine living among the mountains</strong></p>
+              <h1>Imagine living among the mountains</h1>
               <p>...</p>
             </article>
           </div>
 
           <div class="thumbnail-content">
             <article>
-              <p><strong>Imagine living among the mountains</strong></p>
+              <h1>Imagine living among the mountains</h1>
               <p>...</p>
             </article>
             <img src="mountains.png" />
