--- a/lib/sass/core/_base_components.sass
+++ b/lib/sass/core/_base_components.sass
@@ -1,9 +1,8 @@
-/*
- *  Kickstart
- *  =========
- *  For users who prefer to use the Sass mixin library, this and their chosen
- *  theme are the only files they'll need.
- */
+// 
+// Base Components
+// ===============
+// These are the base components from which dependent components can extend.
+//
 
 // Components
 @import ../components/_alerts
