--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -153,6 +153,31 @@ table
 
 // TYPOGRAPHY
 // ----------
+
+.xxl
+  +xxl-heading
+
+.xl
+  +xl-heading
+
+.lg
+  +lg-heading
+
+.md
+  +md-heading
+
+.rg
+  +rg-heading
+
+.sm
+  +sm-heading
+
+.xs
+  +xs-heading
+
+.xxs
+  +xxs-heading
+
 .readable
   +p(true)
 
@@ -164,3 +189,9 @@ table
 
 .hero
   +hero
+
+.list-unstyled
+  +list-unstyled
+
+.list-horizontal
+  +list-horizontal
