--- a/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_images.sass
@@ -11,6 +11,12 @@
   > :not(img)
     + img, + figure
       margin-left: $space/2
+    
+    h1
+      +xs-heading
+
+    h2, h3, h4, h5
+      +xxs-heading
 
   > img, > figure
     + :not(img)
