Cleaning up unused mixins

--- a/lib/sass/components/_forms.sass
+++ b/lib/sass/components/_forms.sass
@@ -11,7 +11,7 @@ textarea
   margin-bottom: ($space/2)
   border: 1px solid #CCC
   display: block
-  +border-radius(3px)
+  border-radius: 3px
 
   label + &
     margin-top: ($space/5)
