--- a/lib/sass/components/_nav.sass
+++ b/lib/sass/components/_nav.sass
@@ -9,9 +9,9 @@
   border-top: 1px solid darken($background, 12%)
 
   nav
-    display: inline-flex
+    display: flex
     align-items: flex-start
-    +flex-wrap
+    flex-wrap: wrap
     justify-content: space-between
     align-content: space-between
     width: 100%
@@ -40,16 +40,16 @@
     ul
       margin: 0
       padding: 0
-      +flex(inline-flex)
-      +justify-content(space-between)
-      +align-content(space-between)
-      +align-items(center)
-      +flex-wrap
+      display: flex
+      justify-content: space-between
+      align-content: space-between
+      align-items: center
+      flex-wrap: wrap
 
       li
         list-style: none
         +root-element
-        +border-radius(0)
+        border-radius: 0
         padding:
           top: (map-get($rootElement, paddingV) - 1)
           bottom: (map-get($rootElement, paddingV) - 1)
@@ -99,7 +99,7 @@
           cursor: pointer
           display: block
           +root-element
-          +border-radius(0)
+          border-radius: 0
           margin: (-1 * map-get($rootElement, paddingV)) (-1 * map-get($rootElement, paddingH))
           padding:
             top: (2 * map-get($rootElement, paddingV))
