--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -28,7 +28,7 @@ a
 
 =pre-default
   color: darken($blue, 25%)
-  +border-radius($space/5)
+  border-radius: $space/5
   padding: ($space/5)
   font-family: monospace
   word-break: break-all
