--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -24,9 +24,9 @@
     color: map-get($black, lighter)
 
   &:hover
-    +box-shadow(0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset)
+    box-shadow: 0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset
     text-decoration: none
 
   &:active
-    +box-shadow(0px 3px 0px 0px rgba(0, 0, 0, 0.1) inset)
+    box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.1) inset
     text-decoration: none
