--- a/lib/sass/core/_root-element.sass
+++ b/lib/sass/core/_root-element.sass
@@ -7,6 +7,6 @@
 
 =root-element
   padding: map-get($rootElement, paddingV) map-get($rootElement, paddingV)
-  +border-radius(3px)
+  border-radius: 3px
   border: 1px solid transparent
   outline: none
