--- a/lib/jade/docs/3.x/ui/forms/index.jade
+++ b/lib/jade/docs/3.x/ui/forms/index.jade
@@ -18,7 +18,7 @@ block basic
     label Last Name
     input(type="text" placeholder="Smith")
 
-    label Issue size
+    legend Issue size
     label
       input(type="radio" name="issue")
       |  Small issue
