--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -60,7 +60,11 @@ block basic
           <input type="submit" class="button" value="Sign up" />
 
 block variations
-  .example
+  .ifnot-semantic
+    :markdown
+      For colored buttons, simply add the `.button-` class of one of the primary colors
+      to the `.button` class.
+
     button.button-green Send
     | &nbsp;
     button.button-red Delete
@@ -69,10 +73,8 @@ block variations
     | &nbsp;
     button.button Cancel
 
-  .ifnot-semantic
     :markdown
-      For colored buttons, simply add the `.button-` class of one of the primary colors
-      to the `.button` class.
+      <span>
 
           <button class="button button-green">Send</button>
           <button class="button button-red">Delete</button>
