--- a/lib/jade/docs/3.x/theming/index.jade
+++ b/lib/jade/docs/3.x/theming/index.jade
@@ -32,7 +32,7 @@ block fullPane
           padding: 20px
           margin-bottom: 15px
 
-    ### Why do it this way?
+    ## Why do it this way?
 
     By decoupling the default styling from the final component name, you get the
     following benefits:
@@ -42,7 +42,7 @@ block fullPane
     Updates to the core styles of Kickstart don't get overwritten when extending
     the component.
 
-    ###### End-user entry points remain untouched
+    ### End-user entry points remain untouched
 
     End users don't need to use any custom name that belongs only to the theme.
     They can flip through theme libraries and keep their library names the same.
