--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -48,6 +48,12 @@
   &.button-violet
     +button($violet)
 
+  &.button-small
+    +button($size: 0.85)
+
+  &.button-large
+    +button($size: 1.2)
+
 // FORMS
 // -----
 .form-horizontal
