--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -162,8 +162,8 @@ html, li, p, table
 // Buttons
 // -------
 
-=button($color: white)
-  +button-default($color)
+=button($color: white, $size: 1)
+  +button-default($color, $size)
 
 // Forms
 // -----
