--- a/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
@@ -1,6 +1,7 @@
 label
   display: block
   font-weight: 500
+  font-size: 0.85rem
 
 form
   margin-bottom: $space
@@ -11,7 +12,7 @@ textarea
   margin-bottom: ($space/2)
   border: 1px solid #CCC
   display: block
-  +border-radius(3px)
+  border-radius: 3px
 
   label + &
     margin-top: ($space/5)
