--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -236,7 +236,7 @@ block granular
 
   .row
     .col-4
-      ul.unstyled
+      ul.list-unstyled
         li
           button.button-large Large
         li
@@ -245,7 +245,7 @@ block granular
           button.button-small Small
 
     .col-4
-      ul.unstyled
+      ul.list-unstyled
         li
           button.button-large Large
           ul.button-dropdown
@@ -271,7 +271,7 @@ block granular
               a(href="#") Option 2
 
     .col-4
-      ul.unstyled
+      ul.list-unstyled
         li
           button.button-large
             | Large
