--- a/rails/app/assets/stylesheets/kickstart_rails/components/_progress.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_progress.sass
@@ -2,11 +2,11 @@ progress
   width: 100%
 
   &::-webkit-progress-bar
-    +border-radius(($space/5))
+    border-radius: ($space/5)
     min-height: $space
     -webkit-appearance: none
     appearance: none
     -moz-appearance: none
 
   &::-webkit-progress-value
-    +border-radius(($space/5) 0 0 ($space/5))
+    border-radius: ($space/5) 0 0 ($space/5)
