--- a/rails/app/assets/stylesheets/kickstart_rails/components/_typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_typography.sass
@@ -132,3 +132,10 @@ a
   margin:
     bottom: 0.5rem
   +heading-break
+
+// Lists
+
+=list-unstyled-default
+  padding: 0
+  margin: 0
+  list-style: none
