--- a/rails/app/assets/stylesheets/kickstart_rails/core/_base_components.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_base_components.sass
@@ -1,9 +1,8 @@
-/*
- *  Kickstart
- *  =========
- *  For users who prefer to use the Sass mixin library, this and their chosen
- *  theme are the only files they'll need.
- */
+// 
+// Base Components
+// ===============
+// These are the base components from which dependent components can extend.
+//
 
 // Components
 @import ../components/_alerts
@@ -11,6 +10,7 @@
 @import ../components/_forms
 @import ../components/_images
 @import ../components/_labels
+@import ../components/_modals
 @import ../components/_nav
 @import ../components/_progress
 @import ../components/_tables
