--- a/rails/app/assets/stylesheets/kickstart_rails/core/_dependent_components.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_dependent_components.sass
@@ -1,10 +1,12 @@
-/*
- *  Kickstart
- *  =========
- *  For users who prefer to use the Sass mixin library, this and their chosen
- *  theme are the only files they'll need.
- */
+//
+// Dependent Components
+// ====================
+// These components extend the core and base components.
+//
 
 // Components
-@import ../components/_tooltips
+@import ../components/_growls
+@import ../components/_modals
 @import ../components/_notifications
+@import ../components/_tabs
+@import ../components/_tooltips
