--- a/rails/app/assets/stylesheets/kickstart_rails/core/_mixins.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_mixins.sass
@@ -1,79 +1,6 @@
-=animation-delay($time)
-  animation-delay: $time
-  -webkit-animation-delay: $time
-  -moz-animation-delay: $time
+=alternate-headings
+  h1
+    +xs-heading
 
-=animation-duration($time)
-  animation-duration: $time
-  -webkit-animation-duration: $time
-  -moz-animation-duration: $time
-
-=animation-fill-mode($mode)
-  animation-fill-mode: $mode
-  -webkit-animation-fill-mode: $mode
-  -moz-animation-fill-mode: $mode
-
-=animation-name($name)
-  animation-name: $name
-  -webkit-animation-name: $name
-  -moz-animation-name: $name
-
-=animation-timing-function($fn)
-  animation-timing-function: $fn
-  -webkit-animation-timing-function: $fn
-  -moz-animation-timing-function: $fn
-
-=border-radius($radius)
-  border-radius: $radius
-  -webkit-border-radius: $radius
-  -moz-border-radius: $radius
-
-=box-shadow($prop1, $prop2: '')
-  @if $prop2 != ''
-    $prop2: ',' + $prop2
-  $propTotal: unquote($prop1 + $prop2)
-  box-shadow: $propTotal
-  -webkit-box-shadow: $propTotal
-  -moz-box-shadow: $propTotal
-
-=box-sizing($prop: border-box)
-  box-sizing: $prop
-  -webkit-box-sizing: $prop
-  -moz-box-sizing: $prop
-
-=transform($prop)
-  transform: $prop
-  -moz-transform: $prop
-  -webkit-transform: $prop
-
-=flex($type: flex)
-  display: -moz-box
-  display: -webkit-box
-  display: -webkit-flex
-  display: -ms-flexbox
-  display: $type
-
-=align-items
-  -webkit-align-items: flex-start
-  -moz-align-items: flex-start
-  align-items: flex-start
-
-=flex-wrap($kind: wrap)
-  -webkit-flex-wrap: $kind
-  -moz-flex-wrap: $kind
-  flex-wrap: $kind
-
-=justify-content($justification)
-  -webkit-justify-content: $justification
-  -moz-justify-content: $justification
-  justify-content: $justification
-
-=align-content($justification)
-  -webkit-align-content: $justification
-  -moz-align-content: $justification
-  align-content: $justification
-
-=align-items($justification)
-  -webkit-align-items: $justification
-  -moz-align-items: $justification
-  align-items: $justification 
+  h2, h3, h4, h5
+    +xxs-heading
