--- a/lib/sass/core/_typography.sass
+++ b/lib/sass/core/_typography.sass
@@ -6,7 +6,7 @@
   line-height: calc(#{$default-line-height} + #{$scalingFactor})
 
 html 
-  color: map-get($black, lighter)
+  color: map-get($black, lightest)
 
 ul
   margin-bottom: $space
