--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -1,4 +1,5 @@
 =button-default($color, $size: 1)
+  font-size: 0.9rem
   +root-element($size: $size)
   padding:
     left: $size * $size * map-get($rootElement, paddingH)
