Trying out smaller button and nav font sizes

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -5,7 +5,7 @@ block hero-title
 
 block hero-example
   div
-    .button White
+    .button Default
     | &nbsp;
     .button.button-clear Clear
     | &nbsp;
