--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -18,7 +18,7 @@
 
 // Grayscale
 
-$white: (dark: #EEE, darker: #DDD, darkest: #CCC)
+$white: (dark: #F7F7F7, darker: #DDD, darkest: #CCC)
 $gray:  (lightest: #BBB, lighter: #AAA, light: #999, dark: #777, darker: #666, darkest: #555)
 $black: (lightest: #444, lighter: #333, light: #222)
 
@@ -162,7 +162,7 @@ html
 // Buttons
 // -------
 
-=button($color: white, $size: 1)
+=button($color: map-get($white, dark), $size: 1)
   +button-default($color, $size)
 
 // Forms
