Writing some node js docs

--- a/lib/jade/docs/3.x/index.jade
+++ b/lib/jade/docs/3.x/index.jade
@@ -15,9 +15,13 @@ block fullPane
 
     Use in a **Rails 4+** project.
 
-    ### [Node.js](#gulp)
+    ### [Gulp](#gulp)
 
     Use our Gulp-powered compilation boilerplate
+
+    ### [Node.js](#node)
+
+    Add Kickstart as an npm package
 
   header#barebones.page-heading
     h3 Barebones
@@ -134,3 +138,15 @@ block fullPane
 
     Rename it to whatever you like and link to the resulting .css file in your
     html/jade
+
+  header#node.page-heading
+    h3 Node.js
+
+  :markdown
+    Kickstart can easily be added as an npm package with
+
+        npm install --save-dev kickstart-node
+
+    This will download the entire repo to a `node_modules` folder.
+
+    
