--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -1,8 +1,9 @@
-=button-default($color)
-  +root-element
+=button-default($color, $size: 1)
+  font-size: 0.9rem
+  +root-element($size: $size)
   padding:
-    left: map-get($rootElement, paddingH)
-    right: map-get($rootElement, paddingH)
+    left: $size * $size * map-get($rootElement, paddingH)
+    right: $size * $size * map-get($rootElement, paddingH)
   display: inline-block
   background-color: $color
   color: map-get($black, light)
@@ -34,9 +35,14 @@
   ul
     +list-unstyled
     margin-bottom: 0
+    padding-top: $size * $size * map-get($rootElement, paddingV)
 
     li
+      +root-element($size)
       padding:
-        top: map-get($rootElement, paddingV)
-        bottom: map-get($rootElement, paddingV)
+        left: 0
+        right: 0
       margin-bottom: 0
+
+      a
+        color: inherit
