--- a/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_nav.sass
@@ -7,6 +7,7 @@
 =navbar-default($bleed-container: false, $background: map-get($white, dark))
   background: $background
   border-top: 1px solid darken($background, 12%)
+  font-size: 0.9rem
 
   nav
     display: flex
