--- a/rails/app/assets/stylesheets/kickstart_rails/core/_root-element.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_root-element.sass
@@ -5,9 +5,12 @@
  *  To ensure consistent spacing when mixed into blocks.
  */
 
-=root-element
-  padding: map-get($rootElement, paddingV) map-get($rootElement, paddingV)
+=root-element($size: 1)
+  padding: ($size * $size * map-get($rootElement, paddingV)) ($size * $size * map-get($rootElement, paddingV))
   border-radius: 3px
   border: 1px solid transparent
   outline: none
   margin-bottom: $space
+  @if $size != 1
+    font-size: #{$size}rem
+  line-height: $size * $default-line-height
