--- a/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_buttons.sass
@@ -6,7 +6,7 @@
     right: $size * $size * map-get($rootElement, paddingH)
   display: inline-block
   background-color: $color
-  color: map-get($black, light)
+  color: map-get($gray, darkest)
   cursor: pointer
   text-decoration: none
   border-color: hsla(0, 0%, 0%, 0.15)
