--- a/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_typography.sass
@@ -41,7 +41,7 @@ a
   margin-bottom: 0px
   padding: 0 (($space/5)/3)
 
-=p-default($content-optimized)
+=p-default($content-optimized: false)
   font-size: 1rem
   margin-bottom: $space
   line-height: $default-line-height
