--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -76,7 +76,7 @@ pre
 =code
   +code-default
 
-=p($content-optimized)
+=p($content-optimized: false)
   +p-default($content-optimized)
 
 =page-heading
