Adding test for false positive

--- a/lib/jade/tests/index.jade
+++ b/lib/jade/tests/index.jade
@@ -45,6 +45,9 @@ html(lang='en')
     #test-modal-2
       h1 Hi, I'm a modal as well.
 
+    a#ddbutton3(role="button") Button
+    button#ddbutton4 Button
+
     a#ddbutton1(role="button")
       | Button
       ul
