Dropdown menu clean up

--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -288,7 +288,7 @@ block granular
                 a(href="#") Option 2
 
         li
-          a.button-small(role="button")
+          button.button-small
             | Small
             ul
               li
