--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -260,7 +260,7 @@ block granular
               a(href="#") Option 2
 
         li
-          button.button Small
+          button.button.button-small Small
           ul.button-dropdown
             li
               a(href="#") Option 1
