--- a/lib/sass/components/_buttons.sass
+++ b/lib/sass/components/_buttons.sass
@@ -27,6 +27,7 @@
       margin:
         left: 1/2 * $size * $size * map-get($rootElement, paddingH)
         right: -1/2 * $size * $size * map-get($rootElement, paddingH)
+      color: rgba(0, 0, 0, 0.3)
 
   @if lightness($color) > 75%
     color: map-get($black, lighter)
@@ -40,11 +41,11 @@
     color: map-get($black, lighter)
 
   &:hover
-    box-shadow: 0px -3px 0px 0px rgba(0, 0, 0, 0.1) inset
+    box-shadow: 0px -2px 0px 0px rgba(0, 0, 0, 0.1) inset
     text-decoration: none
 
   &:active
-    box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.1) inset
+    box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.1) inset
     text-decoration: none
 
   ul
